# compiler-practice

./: .gitignore  CMakeLists.txt  README.md
5-regular-grammar/: CMakeLists.txt  finite_automaton.cc  finite_automaton.h  main.cc  nfa_graph.cc  nfa_graph.h  re_parser.cc  re_parser.h  regex_parser.h  test_re_parser.cc  test_regex_parser.cc  tokenizer.cc  tokenizer.h
common/: CMakeLists.txt  mem_manager.h  simplelogger.h  test_mem_manager.cc  utility.h
include/: mem_manager.h  simplelogger.h
src/: ast.cc  ast.h  expr_grammar.cc  expr_grammar.h  finite_automaton.cc  finite_automaton.h  golike_grammar.cc  golike_grammar.h  grammar.h  ll_parser.cc  ll_parser.h  main.cc  regex_parser.cc  regex_parser.h  symbol.h  token.h  tokenizer.cc  tokenizer.h  utility.h
test/: test_expr_grammar.cc  test_golike_parse.cc  test_golike_tokenize.cc  test_golike_tokenizer.cc  test_ll_parser.cc  test_mem_manager.cc  test_regex_parser.cc  test_tokenizer.cc
test/testgo/src/main/: hellogo.go
test/testgo/src/simple_add/: add.go
test/testgo/src/simple_sub/: sub.go
test/testgo/src/simpleadd/: add.go
test/testgo/src/simplesub/: sub.go
test/testgo/src/testcase/: basic_type.go  comment.go  for.go  func.go  if.go  import.go  switch.go  var.go
